chore: tweak hero css to be reusable

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,6 +2,13 @@
   © 2025 datsforge 
   Proprietary – See LICENSE for details. 
 */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   scroll-behavior: smooth;
 }
