--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -11,19 +11,24 @@
     justify-content: center;
     align-items: center;
 
-    max-height: var(--hero-height);
-    height: var(--hero-height);
+    min-height: var(--hero-height);
 
-    background-image: url('/assets/images/datsforge/hero/datsforge_banner_v003_1920x1080.png');
     background-position: center calc(50% + var(--hero-parallax, 0px));
     background-repeat: no-repeat;
     background-size: cover;
     will-change: background-position;
 
     font-family: var(--md-sys-font-primary);
-    color: var(--md-sys-color-on-primary-container);
     box-shadow: var(--md-sys-elevation-4);
     text-align: center;
+}
+
+.hero.hero-home {
+    background-image: url('/assets/images/datsforge/hero/datsforge_banner_v003_1920x1080.png');
+}
+
+.hero.hero-free-promo {
+    background-color: var(--md-sys-color-surface-container-lowest);
 }
 
 /*  Hero background overlay -Slight tint to boost foreground contrast */
@@ -45,18 +50,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: var(--md-sys-shape-extra-large);
+    padding: var(--md-sys-spacing-lg);
+    gap: var(--md-sys-spacing-lg);
 
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
-    padding: var(--md-sys-spacing-5xl);
-    box-sizing: border-box;
 }
 
 /* ==== Slogan ==== */
 .hero .slogan {
     display: flex;
     flex-direction: column;
-    color: var(--color-white-on-primary-container);
     gap: var(--md-sys-spacing-sm);
     max-width: 820px;
     margin: 0;
@@ -65,7 +70,7 @@
 
 /* Slogan Title — Centered */
 .hero .slogan h1 {
-    color: var(--color-on-background);
+    color: var(--md-sys-color-on-background);
     margin: 0 0 var(--md-sys-spacing-lg) 0;
     font-family: var(--md-sys-font-family-secondary);
     font-weight: 300;
@@ -73,8 +78,12 @@
     text-align: center;
 }
 
+.hero.hero-home .slogan h1 {
+    color: var(--color-on-background);
+}
+
 /* Slogan Subtext */
-.hero .slogan p {
+.hero.hero-home .slogan p {
     margin: 0;
     font-size: var(--md-sys-typescale-display-small);
     font-weight: 400;
@@ -88,20 +97,26 @@
     color: var(--color-yellow);
 }
 
+.hero.hero.hero-free-promo .slogan strong {
+    border-radius: var(--md-sys-shape-small);
+    padding:var(--md-sys-spacing-xs);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
 .hero .contact-info {
     display: flex;
     position: absolute;
     gap: var(--md-sys-spacing-lg);
     left: var(--md-sys-spacing-xl);
     bottom: var(--md-sys-spacing-xl);
+    z-index: var(--md-sys-z-index-fab);
 }
 
 .fireflies {
     position: absolute;
     inset: 0;
     pointer-events: none;
-    z-index: 0;
-    /* Behind your content */
+    z-index: var(--md-sys-z-index-bg);
 }
 
 /* ==== Firefly animation ==== */
