--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -20,7 +20,7 @@
     font-size: var(--md-sys-typescale-display-small);
   }
 
-  .main-header{
+  .main-header {
     margin-top: var(--md-sys-spacing-2xl);
   }
 
@@ -142,6 +142,7 @@
   }
 
   /**======== Nav bar =========**/
+  .navbar-base,
   .navbar-main,
   .navbar-legal,
   .navbar-tp,
