chore: clean up of phase directories

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -36,6 +36,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body.protected-page {
+ visibility: hidden;
+}
 
 h1 {
   font-size: var(--md-sys-typescale-display-large);
