--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -48,7 +48,7 @@
 .navbar-main,
 .navbar-legal,
 .navbar-tp,
-.navbar-free-promo {
+.navbar-f-phase {
   display: flex;
   justify-content: space-between;
   align-items: center;
