chore: tweaked field snakbar bahaviour

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1474,3 +1474,24 @@ textarea {
 .field-snackbar.show {
   opacity: 1;
 }
+
+/* === Type Styles === */
+.field-snackbar.error {
+  background-color: var(--md-sys-color-error-container);
+  color: var(--md-sys-color-on-error-container);
+}
+
+.field-snackbar.success {
+  background-color: var(--md-sys-color-inverse-surface);
+  color: var(--md-sys-color-inverse-on-surface);
+}
+
+.field-snackbar.info {
+  background-color: var(--md-sys-color-primary-container);
+  color: var(--md-sys-color-on-primary-container);
+}
+
+.field-snackbar.warning {
+  background-color: var(--md-sys-color-tertiary-container);
+  color: var(--md-sys-color-on-tertiary-container);
+}
